# reviewer

./: Cargo.toml  Justfile
.github/workflows/: publish.yaml  test.yaml
.zed/: settings.json
crates/charts/: Cargo.toml
crates/charts/src/: chart_size.rs  lib.rs  sunburst.rs
crates/client/: Cargo.toml
crates/client/src/: ai_client.rs  change_request.rs  gitlab_client.rs  lib.rs  parsed_note.rs  reviewer.rs
crates/ui/: Cargo.toml  Trunk.toml  index.html
crates/ui/src/: home.rs  layout.rs  main.rs
crates/ui/src-tauri/: Cargo.toml  tauri.conf.json
