[package]
name = "charts"
version = "0.1.0"
edition = "2021"

[dependencies]
charming = { version = "0.4.0", features = ["wasm"] }
client = { path = "../client" }
js-sys = "0.3.72"
log = "0.4.22"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = [
    "DomRectReadOnly",
    "ResizeObserver",
    "ResizeObserverEntry",
] }
