[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
convert_case = "0.6.0"
futures = "0.3.31"
gloo-storage = "0.3.0"
log = "0.4.22"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
urlencoding = "2.1.3"
