[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
charming = { version = "0.4.0", features = ["wasm"] }
charts = { path = "../charts" }
client = { path = "../client" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
dotenvy_macro = "0.15.7"
icondata = "0.4.0"
js-sys = "0.3.72"
leptos = { version = "0.6.15", features = ["csr", "nightly", "tracing"] }
leptos_icons = "0.3.1"
log = "0.4.22"
serde = "1.0.214"
serde_json = "1.0.132"
wasm-bindgen = "0.2.95"
web-sys = "0.3.72"
